--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 streamlit
 pandas
 sqlalchemy
-langchain
-langchain-community
-langchain-google-genai
+
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-google-genai==0.0.11
+
 google-generativeai
 matplotlib
 python-dotenv
