Modify requirements.txt for package updates
Updated langchain and related package versions while removing some unused packages.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,10 @@ streamlit
 pandas
 sqlalchemy
 plotly
-
-langchain
-langchain-core
-langchain-community
-langchain-google-genai
-
-google-generativeai
-matplotlib
-python-dotenv
 reportlab
-openpyxl
+
+langchain>=0.1.16
+langchain-community>=0.0.30
+langchain-core>=0.1.40
+langchain-google-genai
+google-generativeai
