--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,15 @@ plotly==5.18.0
 # UI
 streamlit==1.29.0
 
-# LLM / Agent - Using older stable versions that support legacy imports
-langchain==0.0.352
-langchain-google-genai==0.0.11
-langchain-community==0.0.38
+# LLM / Agent - Pinned to exact working versions
+langchain==0.0.340
+langchain-google-genai==0.0.6
+langchain-community==0.0.10
+langchain-core==0.0.13
 
 # PDF Reports
 reportlab==4.0.7
 
 # Additional dependencies
-google-generativeai==0.3.2
+google-generativeai==0.3.1
+pydantic==1.10.13
