--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,13 @@ plotly==5.18.0
 # UI
 streamlit==1.29.0
 
-# LLM / Agent - Using the oldest stable versions with legacy imports
-langchain==0.0.267
-langchain-google-genai==0.0.5
+# LLM / Agent - Simple modern versions without deprecated imports
+langchain-google-genai==2.0.5
+langchain-community==0.3.12
+langchain-core==0.3.28
 
 # PDF Reports
 reportlab==4.0.7
 
 # Additional dependencies
-google-generativeai==0.2.2
-pydantic==1.10.12
+google-generativeai==0.8.3
